--- a/style.css
+++ b/style.css
@@ -312,6 +312,28 @@ h1 {
     border: 2px solid #ffffff;
 }
 
+/* First 18 elements (1-18) have red background */
+.element-cell[data-element-number="1"],
+.element-cell[data-element-number="2"],
+.element-cell[data-element-number="3"],
+.element-cell[data-element-number="4"],
+.element-cell[data-element-number="5"],
+.element-cell[data-element-number="6"],
+.element-cell[data-element-number="7"],
+.element-cell[data-element-number="8"],
+.element-cell[data-element-number="9"],
+.element-cell[data-element-number="10"],
+.element-cell[data-element-number="11"],
+.element-cell[data-element-number="12"],
+.element-cell[data-element-number="13"],
+.element-cell[data-element-number="14"],
+.element-cell[data-element-number="15"],
+.element-cell[data-element-number="16"],
+.element-cell[data-element-number="17"],
+.element-cell[data-element-number="18"] {
+    background: #ff0000;
+}
+
 /* Modal */
 .modal {
     display: none;
