Add black text color for readability on yellow element cells in style.css

--- a/style.css
+++ b/style.css
@@ -348,6 +348,30 @@ h1 {
     background: #ffff00;
 }
 
+/* Yellow elements have black text for readability */
+.element-cell[data-element-number="20"] .element-symbol,
+.element-cell[data-element-number="20"] .element-number,
+.element-cell[data-element-number="26"] .element-symbol,
+.element-cell[data-element-number="26"] .element-number,
+.element-cell[data-element-number="29"] .element-symbol,
+.element-cell[data-element-number="29"] .element-number,
+.element-cell[data-element-number="30"] .element-symbol,
+.element-cell[data-element-number="30"] .element-number,
+.element-cell[data-element-number="47"] .element-symbol,
+.element-cell[data-element-number="47"] .element-number,
+.element-cell[data-element-number="53"] .element-symbol,
+.element-cell[data-element-number="53"] .element-number,
+.element-cell[data-element-number="78"] .element-symbol,
+.element-cell[data-element-number="78"] .element-number,
+.element-cell[data-element-number="79"] .element-symbol,
+.element-cell[data-element-number="79"] .element-number,
+.element-cell[data-element-number="80"] .element-symbol,
+.element-cell[data-element-number="80"] .element-number,
+.element-cell[data-element-number="82"] .element-symbol,
+.element-cell[data-element-number="82"] .element-number {
+    color: #000000;
+}
+
 /* Modal */
 .modal {
     display: none;
